AccountName, BandName multivalues $$ separated -- DONE same for other multi valued. -- DONE date range configurable -- DONE multple partition query  tableName_DDMMYY -- DONE

--- a/config/tool.properties
+++ b/config/tool.properties
@@ -7,3 +7,4 @@ db.connection.url=localhost:1521:orcl
 cdr.tablename=cdr_table
 output.directory=d:\\Vijay\\
 output.page.size=50
+max.date.diff.allowed=2
