--- a/executables/tool.properties
+++ b/executables/tool.properties
@@ -6,3 +6,5 @@ db.password=welcome
 db.connection.url=localhost:1521:orcl
 cdr.tablename=cdr_table
 output.directory=d:\\Vijay\\
+output.page.size=50
+max.date.diff,allowed=2
