--- a/src/tool.properties
+++ b/src/tool.properties
@@ -7,3 +7,4 @@ db.connection.url=localhost:1521:orcl
 cdr.tablename=cdr_table
 output.directory=d:\\Vijay\\
 output.page.size=50
+max.date.diff.allowed=2
