--- a/executables/tool.properties
+++ b/executables/tool.properties
@@ -2,9 +2,10 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 db.name=cdr_tool
+db.user.name=sa
 db.password=welcome
-db.connection.url=localhost:1521:orcl
+db.connection.url=127.0.0.1
 cdr.tablename=cdr_table
 output.directory=d:\\Vijay\\
 output.page.size=50
-max.date.diff,allowed=2
+max.date.diff.allowed=2
